# pve-manager

PVE/: VZDump.pm
debian/: control.in
po/: LINGUAS  Makefile  Makevars  POTFILES  POTFILES.in  ca.po  cs.po  da.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  jsgettext.pl  messages.pot  nb.po  nl.po  nn.po  no.po  pl.po  po2js.pl  pt.po  pt_BR.po  pt_br.po  pve-manager.pot  ro.po  ru.po  sl.po  sr.po  sv.po  tr.po  vi.po  zh_CN.po
www/ext4/: Makefile  Makefile.am
www/manager/form/: CompressionSelector.js
